# backend

./: .dockerignore  .gitignore  0_DB설계.md  0_api_adminDocument_set.md  0_api_adminllm.md  0_api_설계.md  0_test.ipynb  0_설계.md  =13.2.0  DB_MIGRATION.md  DOCKER_BUILD_GUIDE.md  Dockerfile  LLM_TEST_SESSION.md  README.md  STRUCTURE.md  config.py  config.yaml  def _resolve_model_path(local_path: str).ini  docker-build.sh  docker-compose-postgresql.yaml  docker-compose.yaml  export_openapi.py  fix_sequence.sql  main.py  openapi.json  pyproject.toml  requirements.txt  translate.py  unknown.json
errors/: __init__.py  exceptions.py  handlers.py  response_models.py
models/: base.py
models/openai/: streamer.py
models/qwen/: __init__.py  streamer.py
repository/: cache_data.py  chat_feedback.py  documents.py  embedding_model.py  event_logs.py  llm_deletion.py  llm_eval_runs.py  llm_finetuning.py  llm_models.py  llm_test_session.py  rag_settings.py  security_level.py  session.py  user.py  workspace.py  workspace_chat.py  workspace_thread.py
repository/prompt_templates/: common.py  doc_gen_templates.py  qa_templates.py  summary_templates.py
repository/users/: doc_gen_templates.py  llm_models.py  session.py  summary_templates.py  thread.py  user.py  workspace.py  workspace_chat.py  workspace_main.py  workspace_thread.py
routers/: docgen_simple.py  mock_company.py  sso.py  workspace.py
routers/admin/: LLM_finetuning_api.py  manage_admin_LLM_api.py  manage_test_LLM_api.py  manage_user_api.py  manage_vator_DB_api.py
routers/commons/: doc_gen_templates.py  qa_templates.py  qna_templates.py  summary_templates.py
routers/login/: mock_company.py  sso.py
routers/prompt_template/: doc_gen_templates.py  qna_templates.py  summary_templates.py
routers/test_error/: test_error.py
routers/users/: api_key.py  chat_feedback.py  doc_gen_templates.py  doc_generation.py  documents.py  summary_templates.py  workspace.py  workspace_chat.py  workspace_thread.py
scripts/: add_llm_model.py  check_db.py  check_milvus.py  crud_test.ipynb  delete_workspace_documents.py  download_embeddingmodel.py  download_hf_models.py  download_qwen3_reranker.py  reset_and_index_models.py  update.ipynb
service/admin/: LLM_finetuning.py  manage_admin_LLM.py  manage_test_LLM.py  manage_user.py  manage_vator_DB.py  test.py  test2.py
service/commons/: doc_gen_templates.py  qa_templates.py  qna_templates.py  summary_templates.py
service/manage_documents/: __init__.py  documents.py  full_text_loader.py  list_documents.py
service/preprocessing/: rag_preprocessing.py
service/preprocessing/extension/: csv_preprocessing.py  doc_preprocessing.py  docx_preprocessing.py  excel_preprocessing.py  hwp_preprocessing.py  pdf_preprocessing.py  ppt_preprocessing.py  pptx_preprocessing.py  txt_preprocessing.py  utils.py
service/prompt_template/: summary_templates.py
service/retrieval/: __init__.py  admin_search.py  common.py  ingestion.py  interface.py  reranker.py  search_pipeline.py  unified.py
service/retrieval/adapters/: __init__.py  admin_docs.py  base.py  local.py  milvus.py  temp_attatchments.py  workspace.py  workspace_docs.py
service/retrieval/pipeline/: __init__.py  milvus_pipeline.py
service/users/: chat.py  chat_feedback.py  chat_history.py  chat_retrieval.py  doc_gen_templates.py  documents.py  session.py  summary_templates.py  upload_documents.py  workspace.py  workspace_thread.py
service/users/chat/: README.md  __init__.py  chat.py  doc_gen.py  qa.py  qna.py  (+2 more)
service/vector_db/: __init__.py  milvus_hitz.py  milvus_store.py
src/: config.py  utils.py
src/api/: main.py
src/core/: workspace.py  workspace_chat.py  workspace_main.py
src/db/: database.py  schema.sql
src/models/: base.py
src/routes/: workspace.py
storage/: base.sql  database.py  db_del.py  db_migrate.py  db_models.py  model  pps_rag.db  pps_rag.db-shm  pps_rag.db-wal  pps_rag.db.bak.2025-10-01-071334  ppsllm.db  schema.sql
storage/backup/: db_backup.md
storage/extracted_texts/: _extraction_meta.json
storage/migrations/: 2025_09_08_service_security_levels.sql
storage/tests/: crud_test.ipynb
storage/train_data/: data.csv
storage/val_data/: .shared_session.json  _sessions.json
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
utils/: __init__.py  auth.py  crypto.py  database.py  documents.py  logger.py  memory.py  middleware.py  model_load.py  slug.py  time.py  vaildator.py
utils/auth/: __init__.py  session.py
utils/llms/: adapters.py  base.py  registry.py
utils/voctor_DB/: __init__.py
(+80 files in other folders)
