[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.10.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "astroid>=4.0.2",
    "asttokens>=3.0.1",
    "attrs==25.3.0",
    "autopep8==2.0.4",
    "av==16.0.1",
    "bcrypt==4.3.0",
    "bitsandbytes==0.48.1",
    "black==25.1.0",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.8.3",
    "chardet==5.2.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "coloredlogs==15.0.1",
    "comm>=0.2.3",
    "debugpy==1.8.16",
    "decorator>=5.2.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "docstring-to-markdown==0.17",
    "eralchemy==1.5.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup>=1.3.0",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "filelock==3.19.1",
    "flake8==7.1.2",
    "flatbuffers==25.2.10",
    "frontend==0.0.3",
    "frozenlist==1.7.0",
    "fsspec==2025.9.0",
    "git-filter-repo==2.47.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "graphviz==0.21",
    "greenlet==3.2.4",
    "grpcio==1.67.1",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata>=8.7.0",
    "ipykernel>=7.1.0",
    "ipython==9.5.0",
    "ipython-pygments-lexers>=1.1.1",
    "isort>=7.0.0",
    "itsdangerous==2.2.0",
    "jedi>=0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "kernels==0.10.1",
    "markupsafe==3.0.2",
    "matplotlib-inline>=0.2.1",
    "mccabe>=0.7.0",
    "milvus-lite==2.5.1",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "mypy>=1.18.2",
    "mypy-extensions>=1.1.0",
    "narwhals==2.1.2",
    "nest-asyncio>=1.6.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "onnxruntime==1.22.1",
    "openai==1.97.0",
    "openpyxl==3.1.5",
    "packaging>=25.0",
    "pandas==2.3.1",
    "parso==0.8.5",
    "pathspec>=0.12.1",
    "peft==0.17.0",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==5.27.2",
    "psutil>=7.1.3",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow==21.0.0",
    "pycodestyle==2.12.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pydocstyle==6.3.0",
    "pyflakes==3.2.0",
    "pygments>=2.19.2",
    "pyjwt==2.10.1",
    "pylint>=4.0.3",
    "pymilvus==2.6.0b0",
    "pymilvus-model==0.3.2",
    "pymupdf==1.26.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-lsp-jsonrpc==1.1.2",
    "python-lsp-server==1.13.1",
    "python-multipart==0.0.20",
    "pytoolconfig==1.3.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "qwen-vl-utils==0.0.14",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "rope==1.14.0",
    "rpds-py==0.27.0",
    "ruff==0.12.12",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "sentence-transformers==5.1.0",
    "setuptools==80.9.0",
    "six>=1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "sqlalchemy==2.0.43",
    "stack-data>=0.6.3",
    "starlette==0.47.1",
    "streamlit==1.48.1",
    "sympy==1.14.0",
    "tabula==1.0.5",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "tokenizers==0.21.4",
    "toml==0.10.2",
    "tomlkit>=0.13.3",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets>=5.14.3",
    "transformers==4.55.0",
    "triton==3.4.0",
    "typing-extensions>=4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.5.0",
    "uv==0.8.12",
    "uvicorn==0.35.0",
    "watchdog==6.0.0",
    "wcwidth>=0.2.14",
    "whatthepatch==1.0.7",
    "wheel==0.45.1",
    "yapf==0.43.0",
    "yarl==1.20.1",
    "zipp>=3.23.0",
]
